@@ -83,6 +83,8 @@ namespace Compiler.OOS_LanguageObjects
             sw.WriteLine(";");
             foreach (var it in this.CodeInstructions)
             {
+                if (it is Ident)
+                    sw.Write(tab + '\t');
                 it.writeOut(sw, cfg);
                 sw.WriteLine(";");
             }
