@@ -75,6 +75,8 @@ namespace Compiler.OOS_LanguageObjects
             }
             foreach(var it in this.CodeInstructions)
             {
+                if (it is Ident)
+                    sw.Write(tab + '\t');
                 it.writeOut(sw, cfg);
                 sw.WriteLine(";");
             }
