@@ -1,6 +1,8 @@
 Version 0.7.0-ALPHA
 	|- Compiler:  fixed objects added using the using instruction where not
 	|             touched by the PreProcessor
+	|- Compiler:  printout syntax got altered slightly (missing tabs and invalid
+	|             new lines)
 	|- Compiler:  fixed for required all params or it would throw a NPE
 	|- Compiler:  fixed NPE when assigning variables in other namespaces
 	|- Compiler:  fixed StackOverflow case with this variable
